# vis-github

./: .gitignore  Cargo.toml  Makefile  README.md
src/: analyzer.rs  cli.rs  context.rs  executer.rs  github.rs  lib.rs  main.rs  visualizer.rs
src/analyzer/: executer.rs  separator.rs
src/github/: client.rs  commit.rs  language.rs  license.rs  ratelimit.rs  repo.rs  user.rs
