[package]
name = "vis-github"
version = "0.1.0"
authors = ["smallkirby <ssmallkirby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.48"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.34.0"
dirs = "4.0.0"
